// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default button 1`] = `
<Button>
  Button
</Button>
`;

exports[`primary button 1`] = `
<Button
  primary={true}
>
  Button
</Button>
`;

exports[`small button 1`] = `
<Button
  small={true}
>
  Button
</Button>
`;
